--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "npx nodemon",
 		"start": "tsc && node dist/index.js",
+		"db": "npx knex --cwd src/db migrate:latest && npx knex --cwd src/db seed:run",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
 		"prepush": "npm run lint && tsc"
@@ -15,18 +16,23 @@
 	"license": "ISC",
 	"dependencies": {
 		"apollo-server": "^3.3.0",
+		"dotenv": "^10.0.0",
 		"graphql": "^15.6.1",
+		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.95.11",
 		"mysql": "^2.18.1",
 		"tslint": "^6.1.3",
 		"typescript": "^4.4.3"
 	},
 	"devDependencies": {
+		"@types/jsonwebtoken": "^8.5.5",
+		"@types/node": "^16.10.3",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"prettier": "^2.4.1"
+		"prettier": "^2.4.1",
+		"ts-node": "^10.2.1"
 	}
 }
