--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,8 @@ FROM node
 
 WORKDIR /server
 
+RUN npm install -g knex
+
 COPY package.json /server/
 RUN npm install
 
@@ -9,4 +11,4 @@ COPY . /server/
 
 EXPOSE 3001
 
-CMD [ "npm", "start" ]
+CMD [ "npm", "run", "initDocker" ]
