--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "npx nodemon",
 		"start": "tsc && node dist/index.js",
-		"db": "npx knex --cwd src/db migrate:latest && npx knex --cwd src/db seed:run",
+		"db": "knex --cwd src/db migrate:latest && knex --cwd src/db seed:run",
+		"initDocker": "npm run db && npm run start",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
 		"prepush": "npm run lint && tsc"
@@ -20,7 +21,7 @@
 		"graphql": "^15.6.1",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.95.11",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.3.0",
 		"tslint": "^6.1.3",
 		"typescript": "^4.4.3"
 	},
