--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,9 +2,11 @@ FROM node
 
 WORKDIR /client
 
-COPY package*.json /client/
+COPY package.json /client/
 
-RUN npm install
+COPY yarn.lock /client/
+
+RUN yarn install
 
 COPY . /client/
 
