--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "client",
-  "proxy": "http://127.0.0.1:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +8,8 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
