--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,13 @@
 		"dev": "npx nodemon",
 		"start": "tsc && node dist/src/index.js",
 		"db": "knex --cwd src/db migrate:latest && knex --cwd src/db seed:run",
+		"prisma:db": "npx prisma migrate dev --name init",
+		"prisma:seed": "npx prisma db seed",
+		"prisma:client": "npm install @prisma/client",
+		"prisma": "npm run prisma:db && npm run prisma:seed && npm run prisma:client",
 		"test:dev": "jest --config=.jestrc.json --watch",
 		"test": "jest --config=.jestrc.json",
-		"initDocker": "npm run db && npm run start",
+		"initDocker": "npm run db && npm run prisma && npm run start",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
 		"prepush": "npm run lint && npm run test && tsc"
