--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "dev": "concurrently \"npm start --prefix client\" \"npm run dev --prefix server\"",
-    "prepush": "concurrently \"npm run prepush --prefix client\" \"npm run prepush --prefix server\""
+    "prepush": "concurrently \"npm run prepush --prefix client\" \"npm run prepush --prefix server\" \"npm run prepush --prefix apollo\""
   },
   "author": "Joshua Vazquez Maru",
   "license": "ISC",
