--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
 	"author": "Joshua Vazquez Maru",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^3.2.1",
+		"@mindu-second-challenge/apollo-server-types": "file:./mindu-second-challenge-apollo-server-types-1.0.1.tgz",
+		"@prisma/client": "^3.3.0",
 		"apollo-server": "^3.3.0",
 		"dotenv": "^10.0.0",
 		"graphql": "^15.6.1",
