--- a/apollo/tsconfig.json
+++ b/apollo/tsconfig.json
@@ -8,6 +8,7 @@
 		"esModuleInterop": true,
 		"outDir": "dist",
 		"isolatedModules": true,
+		"skipLibCheck": true,
 		"strict": true,
 		"noImplicitAny": true,
 		"strictNullChecks": true,
