--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Lint and Test CI
 
 on:
   push:
@@ -22,5 +22,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: yarn install --frozen-lockfile
     - run: npm run prepush
