--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
 		"initDocker": "npm run db && npm run prisma && npm run start",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
-		"prepush": "npm run lint && npm run test && tsc"
+		"prepush": "npm run lint && npm run test",
+		"onpullrequest": "tsc"
 	},
 	"prisma": {
 		"seed": "ts-node prisma/seed.ts"
