--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,4 +1,4 @@
-name: Lint and Test CI
+name: Tests and Builds CI
 
 on:
   push:
@@ -20,6 +20,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: yarn install --frozen-lockfile
-      - run: npm run onpullrequest
+          cache: "yarn"
+      - run: yarn install
+      - run: yarn onpullrequest
