--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,6 +20,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
-      - run: yarn install
-      - run: yarn onpullrequest
+          cache: "npm"
+      - run: npm ci
+      - run: npm run onpullrequest
