--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
 		"initDocker": "npm run db && npm run prisma && npm run start",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
-		"prepush": "npm run lint && npm run test && tsc"
+		"prepush": "npm run lint && npm run test",
+		"onpullrequest": "tsc"
 	},
 	"prisma": {
 		"seed": "ts-node prisma/seed.ts"
@@ -34,7 +35,7 @@
 		"knex": "^0.95.11",
 		"mysql2": "^2.3.0",
 		"tslint": "^6.1.3",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.4"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.0.2",
