--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
 		"prepush": "npm run lint && npm run test",
-		"onpullrequest": "tsc"
+		"onpull_request": "tsc"
 	},
 	"prisma": {
 		"seed": "ts-node prisma/seed.ts"
