--- a/client/package.json
+++ b/client/package.json
@@ -3,34 +3,33 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@apollo/client": "^3.4.16",
-		"@emotion/react": "^11.4.1",
-		"@emotion/styled": "^11.3.0",
-		"@material-ui/core": "^5.0.0-beta.5",
-		"@material-ui/icons": "^4.11.2",
+		"@apollo/client": "^3.5.8",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
 		"@mindu-second-challenge/apollo-server-types": "file:./mindu-second-challenge-apollo-server-types-1.0.1.tgz",
-		"@mui/lab": "^5.0.0-alpha.50",
-		"@mui/material": "^5.0.3",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
-		"@types/react-redux": "^7.1.19",
-		"date-fns": "^2.25.0",
-		"graphql": "^15.6.1",
-		"node-sass": "^7.0.0",
+		"@mui/icons-material": "^5.4.1",
+		"@mui/lab": "^5.0.0-alpha.68",
+		"@mui/material": "^5.4.1",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.17",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.11",
+		"@types/react-redux": "^7.1.22",
+		"date-fns": "^2.28.0",
+		"graphql": "^16.3.0",
+		"node-sass": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-redux": "^7.2.5",
-		"react-router-dom": "^5.3.0",
-		"react-scripts": "4.0.3",
-		"redux": "^4.1.1",
+		"react-redux": "^7.2.6",
+		"react-router-dom": "^6.2.1",
+		"react-scripts": "^5.0.0",
+		"redux": "^4.1.2",
 		"redux-persist": "^6.0.0",
-		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"typescript": "^4.5.5",
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -62,14 +61,19 @@
 		]
 	},
 	"devDependencies": {
-		"@types/react-router-dom": "^5.3.1",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
-		"eslint": "^7.32.0",
+		"@types/react-router-dom": "^5.3.3",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
+		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.26.1",
-		"prettier": "^2.4.1",
+		"eslint-plugin-react": "^7.28.0",
+		"prettier": "^2.5.1",
 		"redux-devtools": "^3.7.0"
+	},
+	"yarn-upgrade-all": {
+		"ignore": [
+			"@mindu-second-challenge/apollo-server-types"
+		]
 	}
 }
