--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "npx nodemon",
+		"build": "tsc",
 		"start": "tsc && node dist/src/index.js",
 		"db": "knex --cwd src/db migrate:latest && knex --cwd src/db seed:run",
 		"prisma:db": "npx prisma migrate dev --name init",
@@ -27,29 +28,33 @@
 	"license": "ISC",
 	"dependencies": {
 		"@mindu-second-challenge/apollo-server-types": "file:./mindu-second-challenge-apollo-server-types-1.0.1.tgz",
-		"@prisma/client": "^3.8.1",
-		"apollo-server": "^3.3.0",
-		"dotenv": "^10.0.0",
-		"graphql": "^15.6.1",
+		"@prisma/client": "^3.9.2",
+		"apollo-server": "^3.6.3",
+		"dotenv": "^16.0.0",
+		"graphql": "^16.3.0",
 		"jsonwebtoken": "^8.5.1",
-		"knex": "^0.95.11",
-		"mysql2": "^2.3.0",
-		"tslint": "^6.1.3",
-		"typescript": "^4.4.4"
+		"knex": "^1.0.3",
+		"mysql2": "^2.3.3",
+		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
-		"@types/jest": "^27.0.2",
-		"@types/jsonwebtoken": "^8.5.5",
-		"@types/node": "^16.10.3",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
-		"eslint": "^7.32.0",
+		"@types/jest": "^27.4.0",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/node": "^17.0.17",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
+		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"jest": "^27.2.5",
-		"prettier": "^2.4.1",
-		"prisma": "^3.2.1",
-		"ts-jest": "^27.0.5",
-		"ts-node": "^10.2.1"
+		"jest": "^27.5.1",
+		"prettier": "^2.5.1",
+		"prisma": "^3.9.2",
+		"ts-jest": "^27.1.3",
+		"ts-node": "^10.5.0"
+	},
+	"yarn-upgrade-all": {
+		"ignore": [
+			"@mindu-second-challenge/apollo-server-types"
+		]
 	}
 }
