--- a/apollo/.eslintrc.json
+++ b/apollo/.eslintrc.json
@@ -1,19 +1,12 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
 	"extends": [
 		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended",
 		"prettier",
 		"plugin:prettier/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
-	"parserOptions": {
-		"ecmaVersion": 12,
-		"sourceType": "module"
-	},
 	"plugins": ["@typescript-eslint", "prettier"],
 	"rules": {
 		"prettier/prettier": [
@@ -26,7 +19,7 @@
 	},
 	"settings": {
 		"import/parsers": {
-			"@typescript-eslint/parser": [".ts", ".tsx"]
+			"@typescript-eslint/parser": [".ts"]
 		},
 		"import/resolver": {
 			"typescript": {}
