--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,15 +1,39 @@
-FROM node:18-bullseye-slim
+FROM node:18-bullseye-slim AS development
+ENV NODE_ENV development
 
-WORKDIR /client
+WORKDIR /project/client
 
-COPY package.json /client/
+COPY apollo/ /project/apollo/
 
-COPY . /client/
+RUN cd .. && cd apollo && yarn install && yarn build
 
-RUN yarn install --network-timeout 100000
+COPY client/ /project/client/
 
-RUN npm run build
+RUN yarn install
 
 EXPOSE 3000
 
-CMD [ "npm", "run", "initDocker" ]
+CMD [ "yarn", "start" ]
+
+FROM node:18-bullseye-slim AS builder
+ENV NODE_ENV production
+ENV DISABLE_ESLINT_PLUGIN true
+
+WORKDIR /project/client
+
+COPY --from=development /project/apollo/ /project/apollo/
+
+COPY --from=development /project/client/ /project/client/
+
+RUN yarn build --production
+
+FROM nginx:1.21.0-alpine as production
+ENV NODE_ENV production
+
+COPY --from=builder /project/client/build /usr/share/nginx/html
+
+COPY --from=builder /project/client/nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
