--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,6 @@
 		"@apollo/client": "^3.5.8",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
-		"@mindu-second-challenge/apollo-server-types": "file:./mindu-second-challenge-apollo-server-types-1.0.1.tgz",
 		"@mui/icons-material": "^5.8.4",
 		"@mui/lab": "^5.0.0-alpha.68",
 		"@mui/material": "^5.4.1",
@@ -20,7 +19,6 @@
 		"@types/react-redux": "^7.1.22",
 		"date-fns": "^2.28.0",
 		"graphql": "^16.3.0",
-		"node-sass": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
@@ -28,6 +26,7 @@
 		"react-scripts": "^5.0.0",
 		"redux": "^4.1.2",
 		"redux-persist": "^6.0.0",
+		"sass": "^1.54.5",
 		"typescript": "^4.5.5",
 		"web-vitals": "^2.1.4"
 	},
@@ -39,7 +38,6 @@
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
 		"prepush": "npm run lint && SET CI=true&& npm run test",
-		"initDocker": "node server.js",
 		"onpull_request": "npm run test && npm run build"
 	},
 	"eslintConfig": {
@@ -65,7 +63,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.34.0",
 		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.28.0",
 		"prettier": "^2.5.1",
@@ -75,5 +73,8 @@
 		"ignore": [
 			"@mindu-second-challenge/apollo-server-types"
 		]
-	}
+	},
+	"workspaces": [
+		"../apollo"
+	]
 }
