--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,7 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true
-	}
+		"resolveJsonModule": true,
+	},
+	"include": ["package.json", "prisma/**/*", "src/**/*", "dotenv-config.ts"]
 }
