--- a/package.json
+++ b/package.json
@@ -3,21 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
-  "scripts": {
-    "dev": "concurrently \"npm start --prefix client\" \"npm run dev --prefix server\"",
-    "install:apollo": "cd apollo && yarn install && yarn build",
-    "install:client": "cd client && yarn install",
-    "install:server": "cd server && yarn install",
-    "postinstall": "yarn install:apollo && yarn install:client && yarn install:server",
-    "prepush": "concurrently \"npm run prepush --prefix client\" \"npm run prepush --prefix server\" \"npm run prepush --prefix apollo\"",
-    "onpull_request": "concurrently \"npm run onpull_request --prefix client\" \"npm run onpull_request --prefix server\" \"npm run onpull_request --prefix apollo\"",
-    "lint": "concurrently \"npm run lint --prefix client\" \"npm run lint --prefix server\" \"npm run lint --prefix apollo\"",
-    "test": "concurrently \"npm run test --prefix client\"",
-    "build": "concurrently \"npm run build --prefix client\" \"npm run build --prefix server\" \"npm run build --prefix apollo\""
-  },
   "author": "Joshua Vazquez Maru",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^7.3.0"
-  }
+  "license": "ISC"
 }
