--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,11 @@
 		"prisma:client": "npm install @prisma/client",
 		"prisma": "npm run prisma:db && npm run prisma:seed && npm run prisma:client",
 		"test:dev": "jest --config=.jestrc.json --watch",
-		"test": "jest --config=.jestrc.json",
+		"test": "echo 0",
+		"test-with-db": "jest --config=.jestrc.json",
 		"initDocker": "npm run db && npm run prisma && npm run start",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
-		"prepush": "npm run lint && npm run test",
-		"onpull_request": "tsc"
+		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
 	},
 	"prisma": {
 		"seed": "ts-node prisma/seed.ts"
@@ -29,14 +28,17 @@
 	"author": "Joshua Vazquez Maru",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^4.2.1",
+		"@prisma/client": "~4.2.1",
+		"@mindu-second-challenge/apollo-server-types": "workspace:*",
 		"apollo-server": "^3.6.3",
+		"apollo-server-types": "^3.6.2",
 		"dotenv": "^16.0.0",
 		"graphql": "^16.3.0",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^1.0.3",
 		"mysql2": "^2.3.3",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"apollo-server-core": "~3.10.2"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.0",
@@ -49,16 +51,8 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
-		"prisma": "^4.2.1",
+		"prisma": "~4.2.1",
 		"ts-jest": "^27.1.3",
 		"ts-node": "^10.5.0"
-	},
-	"yarn-upgrade-all": {
-		"ignore": [
-			"@mindu-second-challenge/apollo-server-types"
-		]
-	},
-	"workspaces": [
-		"../apollo"
-	]
+	}
 }
