fix(rush): add missing dependency and prisma generate

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,6 +45,7 @@ jobs:
 
       - run: rush install
       - run: rush update
+      - run: cd server && npx prisma generate
       - run: rush rebuild
 
       - name: lint
