--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
 	"scripts": {
 		"dev": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "set CI=true&&react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
@@ -67,6 +67,7 @@
 		"eslint-plugin-react": "^7.28.0",
 		"prettier": "^2.5.1",
 		"redux-devtools": "^3.7.0",
-		"@types/testing-library__jest-dom": "~5.14.5"
+		"@types/testing-library__jest-dom": "~5.14.5",
+		"identity-obj-proxy": "~3.0.0"
 	}
 }
