--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
 	"scripts": {
 		"dev": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "set CI=true&&react-scripts test",
+		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
